--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 body {
     color: white;
-    background-color: #333;
-    font-size: x-large;
-    font-family: 'Satisfy', cursive;
-    margin: 5em 25%;
+   background-color: black;
+   font-family: 'Sacramento', cursive;
+   font-size: 32px;
+   margin-top: 5%;
+   margin-left: 20%;
+   margin-right: 20%;
  }
